<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebackground"
    tools:context=".Profile">

    <!-- Header Section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/grey"
            android:text="@string/lang"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <!-- Profile Image and Info Section -->

    <!-- Options Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_user_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Hanan Hijazi"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:text="0532811583"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:layout_marginTop="350dp">

        <Button
            android:id="@+id/btn_my_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_location"
            android:paddingTop="20dp"
            android:drawableLeft="@drawable/ic_location"
            android:padding="25dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginVertical="4dp" />

        <Button
            android:id="@+id/btn_coupons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_coupons"
            android:drawableLeft="@drawable/ic_coupon"
            android:padding="25dp"
            android:paddingTop="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginVertical="4dp" />

        <Button
            android:id="@+id/btn_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cards"
            android:drawableLeft="@drawable/ic_card"
            android:padding="25dp"
            android:paddingTop="20dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginVertical="4dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logout"
        android:layout_width="52dp"
        android:layout_height="61dp"
        android:src="@drawable/loh_out" />

</FrameLayout>
